@@ -330,7 +330,7 @@ class CsvDataObjectMapperTest {
         try (CSVParser parser = CSVFormat.DEFAULT.parse(new StringReader(csvString))) {
             var records = parser.getRecords();
             assertThat(records).as("CSV should parse to exactly one record").hasSize(1);
-            return records.get(0);
+            return records.getFirst();
         }
     }
 }
